Bug 14854 - samldb_krbtgtnumber_available() looks for incorrect string.
Summary: samldb_krbtgtnumber_available() looks for incorrect string.
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.14.7
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-01 20:03 UTC by Jeremy Allison
Modified: 2021-10-27 13:01 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix for 4.15.next, 4.14.next. (2.72 KB, patch)
2021-10-01 21:20 UTC, Jeremy Allison
abartlet: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2021-10-01 20:03:15 UTC
In samldb_krbtgtnumber_available(), we were searching for "msDC-SecondaryKrbTgtNumber" instead of "msDS-SecondaryKrbTgtNumber" - note "DC" instead of "DS".

"msDS-SecondaryKrbTgtNumber" is used everywhere else in the code, so we must use the same here.
Comment 1 Samba QA Contact 2021-10-01 20:51:04 UTC
This bug was referenced in samba master:

b6d60e8f4d06ca9733a4cc3094312a3dc456a656
Comment 2 Jeremy Allison 2021-10-01 21:20:45 UTC
Created attachment 16835 [details]
git-am fix for 4.15.next, 4.14.next.

Cherry-picked from master.
Comment 3 Andrew Bartlett 2021-10-04 08:28:12 UTC
Comment on attachment 16835 [details]
git-am fix for 4.15.next, 4.14.next.

Thanks for handling the backport!
Comment 4 Andrew Bartlett 2021-10-04 08:28:39 UTC
Assigning to Jule for 4.15 and 4.14
Comment 5 Jule Anger 2021-10-04 09:40:50 UTC
Pushed to autobuild-v4-{15,14}-test.
Comment 6 Samba QA Contact 2021-10-04 10:44:04 UTC
This bug was referenced in samba v4-14-test:

b66b172bb57d0ad0693daac0ec86c49295526de2
Comment 7 Samba QA Contact 2021-10-04 12:56:04 UTC
This bug was referenced in samba v4-15-test:

c95146480601a229716dda13b0e8416774bdbeeb
Comment 8 Jule Anger 2021-10-05 07:43:05 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2021-10-05 13:20:12 UTC
This bug was referenced in samba v4-14-stable (Release samba-4.14.8):

b66b172bb57d0ad0693daac0ec86c49295526de2
Comment 10 Samba QA Contact 2021-10-27 13:01:37 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.1):

c95146480601a229716dda13b0e8416774bdbeeb